--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "element-plus": "^2.9.3",
+    "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
     "pixi-live2d-display": "^0.4.0",
