--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "build-only": "vite build"
   },
   "dependencies": {
     "axios": "^1.7.9",
